@@ -1,0 +1,14 @@
+DEFINED_PHASES=configure install prepare
+DEPEND=pulseaudio? ( media-sound/pulseaudio ) dbus? ( sys-apps/dbus ) pango? ( x11-libs/pango ) =media-libs/freetype-2* >=media-libs/imlib2-1.3.0[X] x11-libs/libSM x11-libs/libICE x11-libs/libX11 x11-libs/libXext x11-libs/libXfixes x11-libs/libXdamage x11-libs/libXxf86vm x11-libs/libXft xrandr? ( x11-libs/libXrandr ) x11-libs/libXrender x11-misc/xbitmaps xinerama? ( x11-libs/libXinerama ) xcomposite? ( x11-libs/libXcomposite ) nls? ( virtual/libintl ) virtual/libiconv virtual/pkgconfig x11-proto/xextproto x11-proto/xf86vidmodeproto xinerama? ( x11-proto/xineramaproto ) xcomposite? ( x11-proto/compositeproto ) x11-proto/xproto nls? ( sys-devel/gettext )
+DESCRIPTION=Enlightenment Window Manager (e16)
+EAPI=4
+HOMEPAGE=http://www.enlightenment.org/
+IUSE=dbus doc nls pango pulseaudio xcomposite xinerama xrandr
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sh ~sparc ~x86 ~x86-fbsd
+LICENSE=BSD
+PDEPEND=doc? ( app-doc/edox-data )
+RDEPEND=pulseaudio? ( media-sound/pulseaudio ) dbus? ( sys-apps/dbus ) pango? ( x11-libs/pango ) =media-libs/freetype-2* >=media-libs/imlib2-1.3.0[X] x11-libs/libSM x11-libs/libICE x11-libs/libX11 x11-libs/libXext x11-libs/libXfixes x11-libs/libXdamage x11-libs/libXxf86vm x11-libs/libXft xrandr? ( x11-libs/libXrandr ) x11-libs/libXrender x11-misc/xbitmaps xinerama? ( x11-libs/libXinerama ) xcomposite? ( x11-libs/libXcomposite ) nls? ( virtual/libintl ) virtual/libiconv
+SLOT=0
+SRC_URI=mirror://sourceforge/enlightenment/e16-1.0.14.tar.gz
+_eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402
+_md5_=c1c0f9b38b784eae31a2d15eb373ece2
