@@ -21,7 +21,7 @@ AUX 2.5/glibc-2.5-hardened-pie.patch 1569 SHA256 ff9cde8857c5da89faa4039e2a81748
 AUX 2.6/glibc-2.6-gentoo-stack_chk_fail.c 9545 SHA256 1410ded812be80d452eada5f9d6b9bd7bdb504c14f01cc27dce3e36b6f92b92a SHA512 360b77df2d19d14060e19e763878297bf042eccd5206ce4829a33c78c982b59b46144116d237a7cac73a22dd6cb4987c8dd50f1d16003baa22c2cb2942d2cbdf WHIRLPOOL 44e14dacdd258c46201a44c2c6aae4d975b960a914c24e49f2b39dae960636512049daa052d3cd8e8d93819d263327c28eac947efdb5d9e240d1bc6e9964016f
 AUX 2.6/glibc-2.6-hardened-inittls-nosysenter.patch 8674 SHA256 cf58ded8fbe9fcb3dc094521feec2588c1520ff2c632b20c69d6a210325c4fcf SHA512 094b24474e42a9714f5298b0768d44f2c0e01b7d8c3b0a754bb16caa6c024106e8c0b1acbce670bacec1ead6653f8365397173d62cb8168b946c8f521ca155d2 WHIRLPOOL 9fa16256f9d3bd2f38023549c0bd4c932d3173b6c3f4ef66e19cdb3eff5cb2def6ec02fa72a7e57ba74da6d5f29b82ddb9692d59f6c694d45b5989fa0bfa6057
 AUX 2.7/glibc-2.7-hardened-inittls-nosysenter.patch 8755 SHA256 b0b1bf0746f7160b89cf281502b95c38dec9cb948d6a50a907b84fd6230a2dc3 SHA512 50563c26e1fd2e71cb034c8a1b85e0e4075ac6467bae46d4cba0c105c940c5aa6531c39cf00c63ebf94be4e290ee485d7bd8239ff08dbc781db605b45c4aa38f WHIRLPOOL 2047148b53073bae4031ad864fc360112e2812115ec455142c82d4694a57387b49b36c98f400dd6f77f5dab3d419303faabe8183a16f0fd68387996c95888a43
-AUX eblits/common.eblit 10199 SHA256 6fa93dde0f9d3ee04d40aa0770d5da0983c446a147d4fa5caf4ae9257fe9e5e7 SHA512 79791d9c0208a4e0aba53071b9d6218d5e2c2704720f2ecc9d21c0aa53f7d0f5b493153b350dffb05c679c339d4027af7c8f1d84d1ab64128b30062e5665a3c8 WHIRLPOOL ea96087cd4719d52eeef2eb886d2661accec242d56d14d87a25f485b47f82bcf2ab6883a52494d942bb0d4d80dd1ac9cb9c3dc0c0ae114abeca77458f64ac5b1
+AUX eblits/common.eblit 10153 SHA256 91f6df9adb645ee28168fa99c51e8299a946ca5b8ffe54bbb4afb31150f82280 SHA512 67c80cd16f41bd81f28a5a67f4c9c77abeb5a078b611229c15972bf5078505ddda9ee6a3a39e686fa567e9b24a30009b443e862611cf8433be03669c6f13dba1 WHIRLPOOL 8664361bfe7b4b3d1afe851cab55c53c670e37eb92d0e755cb16ffd03a7d2e798db0659bb290acb94de3f9ef314dcd54148fb1bf9bd78482a134f937e943ae11
 AUX eblits/pkg_postinst.eblit 1081 SHA256 21c349d6999841b277dd00ed6f2bf4b33d14724510da3c15a99e775cb71bd180 SHA512 b491761a0923b779535b4a5abf6e00efb6f2c0bbb68e7fb01b2cad54034b63ddfa271afce16b17b17b53ac809ed869c55f94c44443d661052779770f4302318b WHIRLPOOL 8e3a3f35a4cefa903bc578d2fb6b22506f3ac94939f9ad1e703f470b13ba0fd3353061e38e3142ecb5c693749c84d4a1e4f4a5920e36ce20dc2f7e3b6b67ed9f
 AUX eblits/pkg_preinst.eblit 2428 SHA256 46caf5097691edd9e2c06fc8e584e35f7ae3e3079c2fb7434d394a36d0ba8439 SHA512 1a0e4a92344a233d62879636432aab0d5c07f8c4236179f1bdbfffb5eb51143c65121576719f29e1e15f3c8ba5b58c3bb297c0e4ce16725284341af9ea262dba WHIRLPOOL e84cfbed5942d2af5ad0d8ba20cbdc1ba20eec8075d50e7cbcc15113c9ec18855cbed79d8a46c27fdee2229d06445d83e26622e27ce6058bcf869215a17878f4
 AUX eblits/pkg_setup.eblit 3953 SHA256 b062a64b9206da83f36260e6f99d812014c826df06d339b32ac5f6975986c6ef SHA512 c4dd7e73c335bba90d2c3788f4a9b35e0ff0e9cb1ab91a2ccf72fba9fc466b72fcd3e21e6f2e2c0b479a6dd55770824160a7e0288a84e7282d7d9241c087eccd WHIRLPOOL 7c1379d190de749871fef339b3eb8789b82e65a417e90bb04075ae34d0c999c5516918a3894782b3bc632ef2b772b206aad61afb18222cc438c13fa4c263d75f
@@ -94,23 +94,23 @@ EBUILD glibc-2.19-r1.ebuild 6915 SHA256 c1e286e48e3aeef974418bb3a9da2f8ad119f080
 EBUILD glibc-2.19.ebuild 6912 SHA256 3a11e60bed77cc2dad678ad97ed7a959a59a91a94ca28fd4d7d8776a6217a00f SHA512 70c9b91f224c276783b96ae60f57ac48886861fda71be6e6e292840b4c8cc0fea798005c26c6c33f198c63fb2c38bf78e994821dfa010086ba7ece443257b851 WHIRLPOOL 98be39cc52c7d8431e46f24f9552db63980f4a38c8e12aaffd4b08c7c66f8931a16fd7deb99e43a5bb330a42e6c1e722a9a8f74d1fe97523d7b4bfe75c9accf5
 EBUILD glibc-2.9_p20081201-r3.ebuild 6787 SHA256 3d9ff2b86df088b8e8cc082c5ddef164b48cffcccfa2ea001306e79a6d52a52c SHA512 7070020105a777bbf6d846fab291b238d7861472c737031e8c52b6d5c2a0524e228b724751325448ce94a42ee39112088b91d0597cd2cdbcc68c51248d2d5a11 WHIRLPOOL aa0e2d11377c3a30478afbef0fa3daa12aa9711d68dc92ab08fca999e599c613648644da2e6f81c38dc98192ed26934c4a35418a97d3146650cd4c82e39a7fed
 EBUILD glibc-9999.ebuild 6914 SHA256 4971f17230296be26af64606f485ecc96b39443299fefed061bd5d75bb92d3b1 SHA512 f3b13235306910ac2ab642de66dc128977fd5bfb33d89d676b464f39e81a7f095283fd5b761d06bfddde111da8763109b06d2223c54d9ae29aa1cd12638c8233 WHIRLPOOL 12c1f8c129da0722346b239e56a1d9f3a7a84739d2e60e986a3946d61297f630f51ec9e03fb0c05958a6c39a01d4ef5d999466632acd27b0125ca0b91170db7f
-MISC ChangeLog 67070 SHA256 d10931394f7ac1869f2283081d42b966ab08eb6f510a3a81a412b13c37e835e9 SHA512 810428b36e27c5162ff09d525857f249d0051c1ca00c2d8a26921c105fefb898e194d72ce5fa220bf6c4d7454e0594c1e254627139b245f9348d85755f25e312 WHIRLPOOL 2169dd14be7d8c75064610afc3a574ffbbfa822133a9fa357056f06942736312e840fac30d0837cc7400e47b3fa2321a273204d947589fd22c50ef0598dc5e16
+MISC ChangeLog 67270 SHA256 00584f6f237ad9560eea85dd1c7004c83eeab3804bdd86d2b1f416b5aa8b33e2 SHA512 c825bae14719f16515d675e28b81a64459832be413e241677c64f275fa55034794db6cea7ff6c29e5190e55c185ea780976ad6b4a4af5ef6b792453df64f0710 WHIRLPOOL 600e0bc7327751d84b5f73305f9eb92024d3835a4d029bd6de8f135bed6b81ab915f2ed1d485c89b9f9581c3a88efca7a784ec257bb2447ff3959b953f1f22c9
 MISC ChangeLog-2007 108548 SHA256 d622be202eb0d61a363b0ae4065012cd1d494fefaa0c03d4aa7986177cdde6d0 SHA512 fdb3f311a3be4b97a6acfceb1763af5ea69e74d8195522c5d03307f75e15a9382991e9e29dbfdec79e74f1c36328f82648768749bc929e5050ff64b628c7ca98 WHIRLPOOL e550f354394569069e000a7e70ec69c94388a0f415c19b427203f0dcbcbeeec0f5e379ee2af7886cd2d68559e749fab8122e7e077985729d7e0e728ae9096d7a
 MISC metadata.xml 596 SHA256 b01caf6893890849a5aef5350b9b8528edb49554ea35b689ae778d475d4a84be SHA512 2ea5bd979d036f6844df11b8e1ee8bd90b61cf66fccf988a5a53e8777710b9e7aa137cf79c8e2f840986805220d1c19ac2b1c83778a5b1bb2b0976b2354768f4 WHIRLPOOL 6cadab521e9b1ef68f9b5f827fcd123e13a58291dd6a958b17193d9e6ac44aae4f73d09f4b1dbc4a9b81612073da6361e50bb1ba9733418ce008f6191e5a0f39
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJTnNvtAAoJEPGu1DbS6WIA+wsP/jxeC2j/ccVT7pb5wyG1J7+k
-MrJIJ1mpuWC+0RljFF6YGqEoE+MVOcKtSDdmc3EWqhbJi4D3kELx/Y++RFxgHSoJ
-VpDXC0NLroNDkf8v5dbrJMulWTpe6MaTHiBx+f18AXW/z/vUXZ9zIFN0QS2jo9PQ
-X6FRCarqjcUGFSUC63ELHLiWkGqJ4S9BIhtAOkU1B1Mpk0D45OnaW8d2zzNZSp0A
-tOtABqQsqY7neP+H9YWXLnS/R3tj5pzVIGkFY/tNq/NZYvtLZpuwxf+WMr65EDQJ
-PO+bklV1jaR+wkKkTyaongGt5yDmkHkrAUmoFp4ilmrODSZsBztiwvPwez7ymYFs
-6jmZIcUCsg//87mL/uBeezw3OEZk3u550isyY0aw/895S6FFrn28qER+uYC2oHiI
-ywczoko0gP9iXBTQ7LkBcZKN/PW6/siqaD4H8GU/ilt3u7a7hNYkv+9I6JnWJfDy
-MPVeMzxfGYhn7CoesT2WuxU3hVFuwYdsaytLcEhY8E2jk/Tg2zhLlMEnJJF40XF1
-IehhbfP5MAOr3oGK9nFXulae59lAZeENHC5ndrJlfsTLBTa7yhuy8hZysY4oRZc1
-Ys3Ec7njZpjekRCxALtgEcGp3ZtddwArFM8iCA8LKeHaxRqkrI+I4lN1QAoWkYWZ
-8G48ij6leGqi6hzc/pUK
-=wFGz
+iQIcBAEBCAAGBQJT1eOxAAoJEPGu1DbS6WIA2k0P+QHr1UtLu7RI6TWUig+I7rd+
+svQnn/LMen6LLP0yHPPhBg2mPQMTkPnAgHO9UHcOaYWlXewnEm945vuCkWf4Eslv
+K7ZEy8nqH2yU7uGI0AkLY2DHiuzEp/v2SkQZgic4woS1Xkw75ZCY6CWBtw3pPnub
+uyICPdpgjkwya//LK3yNom/ICU7/0DOMUApWXGPczvBUslZIuRh7i/p47gMkhz6J
+S8p/7B1WdQlllBcVD3Zv59oQD0/hG1XXYhzPNqihOqkav7jJa+WgCLl34SrwINPj
+kvEcLg+/iorNNPGO1tu1fsKE8chnOkgTk5MpZOgcDsTIbtetQ/tegWQlvMt4x36M
+cDtJDD8UAX5mvla49G7bOhFZ5uAgW2pGHf9MDjG9PdzLdjce2GugwyHCpSknU+Bl
+rIhPEMteNaK5fTSVaFQApYcyLMmGk2KZ4gYLOUzqbkRuG0Y2rVtlSEW7q39GCzBu
+HpJNFttaYAMDmVU1X/7d/Dn91P9kilZZUSiAoq/QxhmSIC3RloxXDxndf4QSiMEq
+RLDaRxchYZnAgkw64xvSqKHQNe26Z2vGWK9vdRiUTBzryGZx3G2FwEQR5nIv9iu2
+H4OHnb96EccDFm/bRPVc0/IY5b5xxjLNtz9sVh5CG8HW/1ykp+r23Pi06w8tEyuB
+D6tui5jUe78HADP45aI3
+=2aTH
 -----END PGP SIGNATURE-----
