@@ -6,6 +6,7 @@ AUX quickstart.diff 474 SHA256 9201674d2f8707f216e18c471f0a4a5a7366b3dd32cb8ec13
 DIST e16-1.0.10.tar.gz 2260313 SHA256 8792bedebded3739803405d0fd45f32343e460e4927bc618670461d1c8cccb9b SHA512 52b7f66f06247f7f0bbe0873e6d36733d02bff34188ec3345511333b967c8b5710bcc335727eb656bfa26b6ead07f549d30258303880dadcd2b465491e9795a4 WHIRLPOOL 0c2d78dc936bd78769b93f8a8dd037819402911ff445a78770c3eea8cb5243268ab3ae867cc3bc603790c69964a4f46d026de9c914b03961a08a65e48fc6add6
 DIST e16-1.0.11.tar.gz 2281672 SHA256 c7bc9fed4a83d2791df2acd6aa9e710cc162f2b54312c834f41940fb60a1f13e SHA512 01a323bbcdbf2ae63179c78423aadd59fe15eed2425abe3b5546c0d2bf9e6458dec0cee75d0704592839d742467d580a018449faab81dfa57ff45aa6d4a56c54 WHIRLPOOL f5b244de3deb17a0b5676057894f1928e3225cd19ee71e382a50184d49a050ea35d288a85f3b80d4abd3bb6c1e0f29cfa6257436c92940d483d8d637eb037dae
 DIST e16-1.0.13.tar.gz 2299510 SHA256 66487942fe6c63050fb7c8fe424f37355a8005ed417355b6e78becd867a12dd2 SHA512 965c853363c15154ca99b71deba3aa1d23bdfee0664b3511b39f52e066ca673a9b042e203e079357c9ca355484006cc4a90d0e0fb29b7396d582f7b9aa302da5 WHIRLPOOL 37118b388e08014ef81038f9e101e4abdf58876a5f468c31926a2f54d51f58154d76abe0080c6a45369a3ab0bb5ddf1c980badcdb1b45002ae63c0dcdb36f072
+DIST e16-1.0.14.tar.gz 2340182 SHA256 45b9a554e366f609764efaed1bf7230e999c3fd7ff5789abf08cccc13dc6d2d2 SHA512 7ac6c6349831c49af54facba55cf804c3a55b2e111e85c714bf186385a8a823b52381b8aff0b19e8d3382c44d44a62a252c951a0398d7d6a774c152c9f9bb33f WHIRLPOOL 478cf0f78a2693a7b5ff926a14bc8750b3d8ed956cc4222ab3ac0baa6d485d35d60b3ec80e98b68e32d6ca6938cd64532640810c8dae127934888069ae0e3982
 DIST e16-1.0.2.tar.gz 2108376 SHA256 fbaa1206250d61a5125bc55f5db28e75ab9eb91e409f91f0e1d177070c58512d SHA512 a1a014d168345cd9bd8accc681bea03be6c39db3c54e76d828d40739a773d222fd2f7f1b2165ae9bb5df2022b47c6ddb229ac2980bd2bb806c81e1fb7ed1ebb4 WHIRLPOOL 1b528e95954d1905fc91c9822acb1b55e9a96a31001d71ea7072bbb6982bbc5f57d9f7b7916d7d0e38685efd65c655c0c4fb05466d68bba9ddb4dbf8b14585cd
 DIST e16-1.0.6.tar.gz 2212263 SHA256 6ab09e326420982a3b828538bae3f1ea4a2e45b8d5f71dbb5b83b591d0d70121 SHA512 4f5b0cecd34f69a0908b78277e5222036afee27e9ef73a1bd58c46ae6a3aaf529dc25557a2dc96ee76c8c06da97639c888919f198c47e93c96f4f30d37aae65c WHIRLPOOL 6eb3c3e3da761cb879619a162df6f403b40ecff0eac8ed78170ebd6bde5c06c631524b9e17e02c633d3b267aaad9c7b5da815e0413f7894a28bf9409c10a5eed
 DIST e16-1.0.7.tar.gz 2223518 SHA256 d36cf57e4125b173608a6f4cbfa53d91f59f047579fe6a40939874293cfe71bc SHA512 ce9c6108e2d87fa669f774577ed48b9a35e5e9b52d0703f20563bfd23918a542b3833023fc5f98967cc1a3da864d47de4747bbd228c49e53b6e9dc505c3a6b0b WHIRLPOOL 33e0bd6cf6f36a7b1af60b92dd6fccb4805ea2ac9daa47d54902cfdba6338cb2a170d6f3afd0fa0f5a335e994c7d564e2a2eb1816ed6b32f6f53102a8ed35fc4
@@ -21,19 +22,28 @@ EBUILD enlightenment-0.18.8.ebuild 2453 SHA256 f3d4e13aa5c2ada3931d06bbf3a570e97
 EBUILD enlightenment-1.0.10.ebuild 2046 SHA256 d3e15849cd3de2cd3fcfe3cb4e7af4ea576364093883ff4e69b1798591d81cd4 SHA512 46cd8c89a54294d4becdb0bed0398837da5483332f216e45ee83e90b0b1c5da77d22fc2ca021c2dc9d49395428af1226fd46cdc0e6c87675d3afb3543d6fde9c WHIRLPOOL 55e44c81f1478149a75c38e00d5145ff8c39227219b376fdc0022de10b9083700532fa282a78621307e8a960007aa15a00dd6eee2c58dcac11f01eb7c3a0d3d9
 EBUILD enlightenment-1.0.11.ebuild 1989 SHA256 cd664da886e08cd1549de38a8736c3b8ac53802c44a7de84019255d46e1c0823 SHA512 f0969ffafbc528ca7b546e875f5018550a09a5fb64883465d904b228221c8fda49e941f8f534b250741366bf22ab11d1fbdea3a3f4d11d671c5a5e7affd55888 WHIRLPOOL 443e091c58eb804862b902ef4ff4cc85756d52b94573da872186e47e7cae4a17f280d33fa9f37e20a86e524ff54fd9494bf9db9104b146b76071dfff07664aab
 EBUILD enlightenment-1.0.13.ebuild 1999 SHA256 26ae32cbef0436ff3f3fbaab70f93251f2b58a9eb23d0ba8230dfec8b3edbc29 SHA512 27742ad8f38e2329faa2154ab5fe567206450123a9404778612f125a59132ddeb752ddf4b94e327332b71c5b98d9eb4f2edd38cdfabaf0520adb92775e0670b8 WHIRLPOOL 5fa0597dd965782db99998d35d3bca8a859c62e8b9f37ff54cb012302440105b0b14f187fbc59cfec9bfa4d58cc59d567c330c2cc828d4ed6607fd68e8fef115
+EBUILD enlightenment-1.0.14.ebuild 1999 SHA256 541340ff98b51b94ef345d07205900bcf04b14080c7f9a975bc3d869b28b266a SHA512 281494f46f5376fd30be3e1773fab949cc8be301a293b10df6563f2a2e538d3ecfefa9862ff8a73d853144e1616eec3f5f2a46f4dd191aa252698c8e56b0f9fb WHIRLPOOL ae4ea95012ea1269f0e62172714069f60e181a6efc7d1e650d29821d3b45c0824c4d5b8900d53e233774e2c13e9fd18ef9221a2df1e32b019d9a4d17b90aee19
 EBUILD enlightenment-1.0.2.ebuild 2042 SHA256 de36d0b8faf039656b1a12eca87a41881c8c3e9fe6136088cde6f54be9f6b9e1 SHA512 0b1644ad69d46ef138681fb6aba843daaa53b05ebe190c367eb02138d3104d7a60ae24a3718ae79c089f2d7bcb6a64ddaa4fa8bc152c5b43c8f353368c9fe640 WHIRLPOOL 81f6803d51898e22dbe41f8378f23061a9ceae30271ee5d3ed495fb41647bbcbd11e4dcb7eae5649118208b170116bfa102feea052804cc11be2d0141a7a6b91
 EBUILD enlightenment-1.0.6.ebuild 2090 SHA256 a63507a1241d65353cb4bfd83ddb240a6485752117933a14841b1414066fc01a SHA512 5fd092abd556ec182afe337e6cb5f9a8b73faca1abbd914b5914b1ab0c6c7885c1374fcdaa1ddf845ad79778df422abe8562e3ebd15f33c77b43acbac0919576 WHIRLPOOL 395d2a4a03746ede308e0a803c74b3c4b8a1b596398783a8615a01ba3c53f497ab72dd4f273b5392baba933f5233a780c8044287bb68cfe32526ec27489490b9
 EBUILD enlightenment-1.0.7.ebuild 2090 SHA256 5cfbf86f9aaa1a003619c6f1b92a16794c2ee660e24d82c00ed1ceecad915299 SHA512 eea2c7393d8c2ad6d82dc3efac682fe51b41d096c7c5e3ef9549537f9f1451cdbac678bd5eeac60e253b1894d98dfe56533d2c196ab45e03336ce055e313846a WHIRLPOOL 869d37f455b62c8d2d9113272ce70176ff8deed10ebe1a4d4c310aed808190499d483cc70eebd271113e450293e1c5e72bed86a80dc25498415b4d45ad033983
 EBUILD enlightenment-1.0.8.ebuild 2080 SHA256 4b868dc821bcedce6fbf659c1b970e8fb8787b19ed6afc29702eb3b5c038b6b7 SHA512 07e48fe099e1f9d41a318afb28e6aed9e33d6842f7129e9cfb7fd79c278f9b957c0d6f53364252fa549628adec5b0cf72b815f8e0fb4e02eb1ab0db31da04ee0 WHIRLPOOL b4776d891efb53abe366d2eaf31d51aa24607eb25efdc0f956bf097fcd63530186a7bbb7f006eee9f4f1b426f36478de6657c5351fff1a32ab5167446ec72828
 EBUILD enlightenment-1.0.9.ebuild 2090 SHA256 0326237b0c3630a139c778c726f4133cf97e20c652d6200c79a417d3db07c242 SHA512 d47b2da524cfb7d5903fa493ee4b2fc1a65bc4d4babeb3add467dba836b7ef3f5c6f30eb9d9d1fbcb6d95490374d35f274d6971017bdc8035ebda8fcbd12053b WHIRLPOOL 9eeec036ea494b69cbedaa49936ce19450e413cc017e92ac45185caf592df0ab8a5a166b35795fb4e2a85b0d32ab7f328fe7332728e1fbbc644807115d7dc89d
-MISC ChangeLog 28486 SHA256 d95dba59b97503cccf5536e35effe603c42aedd515209983d08772e61133eab7 SHA512 4bc0b38796e1dcd1139a8c3a5edd6f251f816dfbf656601a9712c4d22e03c7118fa7742f1e6811a65fe2c51f047653089d1194d3ef492ee0ce8adf5881ee6f9c WHIRLPOOL 459cf67310a1393b04e2ad1e96ba73d563f5b816b8417f90cd025c17c1f93382414d5553dfb135d9a484bd63109324a7ae3b366108e4515f14e75f371a1e9b25
+MISC ChangeLog 28621 SHA256 828c56a9be371e1a0f5ff507f90b44c226ffa58094608191893a8d42f4f06414 SHA512 f99373e8bc2416927e2ed537b0af72024e4a443f0cc519395f8f8fca84290921b6160ba687e36fa59974950dbf04eb7c7e806d7b47abf590edc1a35762c23b47 WHIRLPOOL 6a54962ac8321a02ca6301168badbf446a77a5649bb7a05e703a18d0b13106ef1473b14d2be7ae667fabf87ec73b27e656e4ef02c04c8dad55e14b32bb678f08
 MISC metadata.xml 7255 SHA256 919acf28654e386fd0fef6cc3457ba595cb877c6748d613724958f801cde097a SHA512 d0181b277e62ca84cca77bb105a9fba776e457a37e9ab47740056ccc7248ecb7a226d1ad38a675f510d0633aef39a344370ae91c6437785934fc080b389e8c92 WHIRLPOOL 550a420c45918a91449231fe5ef3f5185c011154a2e11ebb05880ca947e3de0533cf67b11e874fb733d042c9757f67c78fbe2095e84e16d0c4b68a2ab6695a1d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iJwEAQEIAAYFAlOVmckACgkQG7kqcTWJkGciSgQAgdv8UbJku9yTLhbpE5wxFo9W
-flxngwg0lJR1+XbhlttbbgQvGIVEaRLNw80IicFKgIM2uGsEXDrmaZBdnrIdJjQc
-oBHTfmaFR3aLO3O50K6elHaxDYWK580K6fu8awaio1o+s+a5IwQNPkpA6YdLPHzr
-FjweVACHvai8u8pOngk=
-=Pctd
+iQIcBAEBCAAGBQJT1eLNAAoJEPGu1DbS6WIA5jAP/jf283wcsA4NtZfbcQLtHd6U
+DIOMDaTsI1RFNL0WdYKuvlFk5Z+VEADt1F82JJINOn3pynmMBpLPzfMzparu7hN5
+KmEeeaXbygGNhBLBMJxUVwpWbX3+uKfP8v2JY1isIeWVEOcab8szSx+c9Kf1GHYV
+nNhNsST6l9ajdWTdnY/s8OOsbKN4Cv3Z50LEUBimJwVKrNfUYhPJKsjqoSiQqu7i
+lTmKhfX5t3RMrOsaaFb74ipr+D1wk2iOqIDt8tT02mWUlN9WA8OwoHdWd11LE3gn
+wtJB1v/UALejeKcICmO+dn56qv62lWN5O2KgB+OUmQFusnDZtfDXAPktCrGenZrF
+jIGOmvx0wfFCUnhH2czh8vR2BhMd6L1o9YCSl58B6rQdfI5CBx7oXYMDHrFwsWuD
+WU4/TghQRrRmp1i9tb9dzSGIVtSdJZThbXhEtpE6JKBRVUYmKVytoKrI7SMXH2Mu
+O1spEfFSJQ8JL/fG/VsS5omVwAG2PmxH0F1qS8v6dI5PQ4bCRg//KDcdmHyYqwYw
+X3MrgrhLdHxX9tK8AOWwscMf4qWLktjcRxOiUUsCnKfxL4fkugZKJsDUfBP+HVEJ
+SJMjKvNXSHYFX7kN/xrWHtX2cgbMa16WyTbqmblIpuWTeTiRYkFkaoRQAubA8/gy
++8N2rw+fEBS/2q4O2nrd
+=SRhF
 -----END PGP SIGNATURE-----
