@@ -1,6 +1,11 @@
 # ChangeLog for x11-wm/enlightenment
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/enlightenment/ChangeLog,v 1.199 2014/06/09 11:25:55 tommy Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/enlightenment/ChangeLog,v 1.200 2014/07/28 05:42:29 vapier Exp $
+
+*enlightenment-1.0.14 (28 Jul 2014)
+
+  28 Jul 2014; Mike Frysinger <vapier@gentoo.org> +enlightenment-1.0.14.ebuild:
+  Version bump.
 
 *enlightenment-0.18.8 (09 Jun 2014)
 
