@@ -1,6 +1,10 @@
 # ChangeLog for sys-libs/glibc
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/glibc/ChangeLog,v 1.997 2014/06/14 23:33:58 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/glibc/ChangeLog,v 1.998 2014/07/28 05:46:16 vapier Exp $
+
+  28 Jul 2014; Mike Frysinger <vapier@gentoo.org> files/eblits/common.eblit:
+  Drop arch nptl logic as it only applies to really old versions of glibc now
+  (linuxthreads) #518048 by Chase Rayfield.
 
 *glibc-2.19-r1 (14 Jun 2014)
 
